--- a/index.html
+++ b/index.html
@@ -4,32 +4,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <title>MIN. MARANATA</title>
 </head>
 <body>
     <div class="tela-app">
         <div class="iphone-14-plus-7 screen"> 
             <div class="flex-row">
-                <div class="overlap-group1">
+                <div class="overlap-group1 animate-slide-in">
                     <img class="fire" src="img/Fire.png" alt="Fire" /> 
                 </div>
-                <div class="min-maranata">Min. MARANATA</div>
+                <div class="min-maranata animate-slide-in">Min. MARANATA</div>
             </div>
             <h1 class="title">Min. 2024</h1>
-            <div class="rectangle-34">
+            <div class="rectangle-34 animate-slide-in">
                 <img src="img/banner min.jpeg" alt="">
             </div>
-            <p class="no-despreze-a-sua-m cagliostro-normal-black-20px">
-            Não despreze a sua mocidade, <br />mas seja um exemplo para os <br />fiéis na palavra, no procedimento, <br />no amor, na fé e na
-            pureza. <br />1 Timóteo 4:12
-            </p>
-            <div class="overlap-group">
+            <section class="container_proprietario animate-slide-in">
+        
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                  <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                  </ol>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <p class="no-despreze-a-sua-m cagliostro-normal-black-20px">
+                            Não despreze a sua mocidade, <br />mas seja um exemplo para os <br />fiéis na palavra, no procedimento, <br />no amor, na fé e na
+                            pureza. <br />1 Timóteo 4:12
+                        </p>
+                    </div>
+                    <div class="carousel-item">
+                      <p class="no-despreze-a-sua-m cagliostro-normal-black-20px">
+                        Ninguém o despreze pelo fato de você ser jovem, <br>
+                         mas seja um exemplo para os fiéis na palavra, <br>
+                          no procedimento, no amor, na fé e na pureza. <br>
+                          1 Timóteo 4:12 (NVI)
+                        </p>
+                    </div>
+                    <div class="carousel-item">
+                        <p class="no-despreze-a-sua-m cagliostro-normal-black-20px">
+                            Pois eu bem sei os planos que estou <br> 
+                            projetando para vós, iz o SENHOR; <br>
+                            planos de paz e não de mal, <br>
+                            para vos dar um futuro e uma esperança. <br>
+                            Jeremias 29:11 (NVI)
+                        </p>
+                    </div>
+                  </div>
+                  <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Anterior</span>
+                  </a>
+                  <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Próximo</span>
+                  </a>
+                </div>
+                <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+                <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+            <script src="script.js"></script>
+            <div class="overlap-group animate-slide-in">
                 <div class="estudos-biblicos cagliostro-normal-black-20px">ESTUDOS BIBLICOS</div> 
                 <div class="overlap-group3">
                     <div class="aceasar">ACESSAR</div>
                 </div>
             </div>
-            <div class="overlap-group2">
+            <div class="overlap-group2 animate-slide-in">
                 <a href="calendario.html"><img class="clipboard-list" src="img/Clipboard List.png" alt="Clipboard List"/></a>
                 <a href="index.html"><img class="dog-house" src="img/Dog House.png" alt="Dog House"/></a>
                 <a href="sala.html"><img class="pray" src="img/Pray.png" alt="Pray"/></a>
