--- a/sala.html
+++ b/sala.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="sala.css">
     <title>CALENDARIO</title>
 </head>
 <body>
@@ -23,7 +24,7 @@
                 </P>
                 <div class="form_box">
                     <form action="https://getform.io/f/c205ae9b-7265-4d0f-8edd-1c7e6c8f1336" method="POST">
-                        <h5>NOME (opcional):</h5>
+                        <h5>NOME (opecional):</h5>
                         <input type="text" name="name" placeholder="Nome">
                         <h5>PEDIDO DE ORAÇÃO</h5>
                         <textarea class="comentario_form" name="comment" placeholder="Digite seu comentário" maxlength="400"></textarea>
