--- a/calendario.html
+++ b/calendario.html
@@ -15,6 +15,7 @@
                 </div>
                 <div class="min-maranata">CALENDARIO</div>
             </div>
+            <p id="versao"><em>Versão 0.1</em></p>
             <iframe src="https://calendar.google.com/calendar/embed?src=45c3d824af5433ec732c8a19401d5197dc34b8df83d3609f5aeb8d7b3f8a6f8e%40group.calendar.google.com&ctz=America%2FFortaleza" style="border: 0" width="100%" height="400px" frameborder="0" scrolling="no"></iframe>
             <div class="overlap-group2">
                 <a href="calendario.html"><img class="clipboard-list" src="img/Clipboard List.png" alt="Clipboard List"/></a>
