--- a/sala.html
+++ b/sala.html
@@ -16,6 +16,7 @@
                 </div>
                 <div class="min-maranata">SALA DE ORAÇÃO</div>
             </div>
+            <p id="versao"><em>Versão 0.1</em></p>
             <div class="forms">
                 <h1>DEIXE SEU PEDIDO DE ORAÇÃO</h1>
                 <P>E tudo o que pedirem em oração,
