--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
         <div class="iphone-14-plus-7 screen"> 
             <div class="flex-row">
                 <div class="overlap-group1 animate-slide-in">
-                    <img class="fire" src="img/Fire.png" alt="Fire" /> 
+                    <img class="fire" src="img/logo juv.png" alt="Fire" /> 
                 </div>
                 <div class="min-maranata animate-slide-in">Min. MARANATA</div>
             </div>
-            <p id="versao"><em>Versão 0.1</em></p>
+            <p id="versao"><em>Versão 2.0</em></p>
             <div class="rectangle-34 animate-slide-in">
-                <img src="img/banner min.jpeg" alt="">
+            
             </div>
             <section class="container_proprietario animate-slide-in">
-        
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -41,7 +40,7 @@
                     <div class="carousel-item">
                         <p class="no-despreze-a-sua-m cagliostro-normal-black-20px">
                             Pois eu bem sei os planos que estou <br> 
-                            projetando para vós, iz o SENHOR; <br>
+                            projetando para vós, diz o SENHOR; <br>
                             planos de paz e não de mal, <br>
                             para vos dar um futuro e uma esperança. <br>
                             Jeremias 29:11 (NVI)
@@ -61,30 +60,19 @@
                 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
                 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
             <script src="script.js"></script>
+            </section>
             <div class="overlap-group animate-slide-in">
                 <div class="estudos-biblicos cagliostro-normal-black-20px">ESTUDOS BIBLICOS</div> 
                 <div class="overlap-group3">
-                    <div class="aceasar">ACESSAR</div>
+                    <div class="acessar">ACESSAR</div>
                 </div>
             </div>
             <div class="overlap-group2 animate-slide-in">
-                <a href="calendario.html"><img class="clipboard-list" src="img/Clipboard List.png" alt="Clipboard List"/></a>
-                <a href="index.html"><img class="dog-house" src="img/Dog House.png" alt="Dog House"/></a>
-                <a href="sala.html"><img class="pray" src="img/Pray.png" alt="Pray"/></a>
+                <a href="calendario.html"><img class="clipboard-list" src="img/Event Accepted Tentatively.svg" alt="Clipboard List"/></a>
+                <a href="index.html"><img class="dog-house" src="img/Dog House.svg" alt="Dog House"/></a>
+                <a href="sala.html"><img class="pray" src="img/Pray.svg" alt="Pray"/></a>
             </div>
         </div>
-        <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-        <script>
-        if (window.netlifyIdentity) {
-            window.netlifyIdentity.on("init", (user) => {
-            if (!user) {
-                window.netlifyIdentity.on("login", () => {
-                document.location.href = "/admin/";
-                });
-            }
-            });
-        }
-        </script>
     </div>
 </body>
 </html>
