--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <div class="tela-app">
         <div class="iphone-14-plus-7 screen"> 
             <div class="flex-row">
-                <div class="overlap-group1 animate-slide-in">
+                <div class="overlap-group1">
                     <img class="fire" src="img/logo juv.png" alt="Fire" /> 
                 </div>
-                <div class="min-maranata animate-slide-in">Min. MARANATA</div>
+                <div class="min-maranata">Min. MARANATA</div>
+                <p id="versao"><em>Versão 2.0</em></p>
             </div>
-            <p id="versao"><em>Versão 2.0</em></p>
-            <div class="rectangle-34 animate-slide-in">
+            <div class="rectangle-34">
             
             </div>
-            <section class="container_proprietario animate-slide-in">
+            <section class="container_proprietario">
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
