--- a/sala.html
+++ b/sala.html
@@ -12,11 +12,10 @@
         <div class="iphone-14-plus-7 screen"> 
             <div class="flex-row">
                 <div class="overlap-group1">
-                    <img class="fire" src="img/Pray.png" alt="Fire" /> 
+                    <img class="fire" src="img/Pray.svg" alt="Fire" /> 
                 </div>
                 <div class="min-maranata">SALA DE ORAÇÃO</div>
             </div>
-            <p id="versao"><em>Versão 0.1</em></p>
             <div class="forms">
                 <h1>DEIXE SEU PEDIDO DE ORAÇÃO</h1>
                 <P>E tudo o que pedirem em oração,
@@ -37,9 +36,9 @@
                 </div>
             </div>
             <div class="overlap-group2">
-                <a href="calendario.html"><img class="clipboard-list" src="img/Clipboard List.png" alt="Clipboard List"/></a>
-                <a href="index.html"><img class="dog-house" src="img/Dog House.png" alt="Dog House"/></a>
-                <a href="#"><img class="pray" src="img/Pray.png" alt="Pray"/></a>
+                <a href="calendario.html"><img class="clipboard-list" src="img/Event Accepted Tentatively.svg" alt="Clipboard List"/></a>
+                <a href="index.html"><img class="dog-house" src="img/Dog House.svg" alt="Dog House"/></a>
+                <a href="#"><img class="pray" src="img/Pray.svg" alt="Pray"/></a>
             </div>
         </div>
     </div>
