--- a/calendario.html
+++ b/calendario.html
@@ -11,16 +11,15 @@
         <div class="iphone-14-plus-7 screen"> 
             <div class="flex-row">
                 <div class="overlap-group1">
-                    <img class="fire" src="img/Clipboard List.png" alt="Fire" /> 
+                    <img class="fire" src="img/Event Accepted Tentatively.svg" alt="Fire" /> 
                 </div>
                 <div class="min-maranata">CALENDARIO</div>
             </div>
-            <p id="versao"><em>Versão 0.1</em></p>
             <iframe src="https://calendar.google.com/calendar/embed?src=45c3d824af5433ec732c8a19401d5197dc34b8df83d3609f5aeb8d7b3f8a6f8e%40group.calendar.google.com&ctz=America%2FFortaleza" style="border: 0" width="100%" height="400px" frameborder="0" scrolling="no"></iframe>
             <div class="overlap-group2">
-                <a href="calendario.html"><img class="clipboard-list" src="img/Clipboard List.png" alt="Clipboard List"/></a>
-                <a href="index.html"><img class="dog-house" src="img/Dog House.png" alt="Dog House"/></a>
-                <a href="sala.html"><img class="pray" src="img/Pray.png" alt="Pray"/></a>
+                <a href="calendario.html"><img class="clipboard-list" src="img/Event Accepted Tentatively.svg" alt="Clipboard List"/></a>
+                <a href="index.html"><img class="dog-house" src="img/Dog House.svg" alt="Dog House"/></a>
+                <a href="sala.html"><img class="pray" src="img/Pray.svg" alt="Pray"/></a>
             </div>
         </div>
     </div>
